Allows users to modify profile field visibility during registration. Fixes #4044.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@5837 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -2398,3 +2398,6 @@ body.no-js .field-visibility-settings-close {
 .field-visibility-settings a {
 	font-size: .9em;
 }
+body.register div.page ul {
+	list-style: none;
+}
